# STYGTFO

./: .gitignore  README.md  pyproject.toml
stygtfo/: __init__.py  __main__.py
